--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,16 @@
-version=0.005
+version=0.006
 
 name=Sah-Schemas-Examples
 
 [Sah::Schemas]
+; recursive fails resolving
+exclude_module=Sah::Schema::example::recurse1
+exclude_module=Sah::Schema::example::recurse2a
+exclude_module=Sah::Schema::example::recurse2b
 
 [@Author::PERLANCAR]
+:version=0.600
 
-:version=0.58
 [Prereqs]
 
 [Prereqs / DevelopX_spec]
